[gd_scene load_steps=12 format=3 uid="uid://cfmpxigrj5blm"]

[ext_resource type="Script" path="res://Scripts/Enemies/Frozen_Bomber.gd" id="1_ksdd2"]
[ext_resource type="Texture2D" uid="uid://c5885l3myek37" path="res://Sprites/Player/Shadow.png" id="2_bgcme"]
[ext_resource type="Texture2D" uid="uid://e2uye471smfc" path="res://Sprites/Enemies/FrozenBomber/FrozenBomberWheel.png" id="2_nyc6u"]
[ext_resource type="Texture2D" uid="uid://brjkyge4jcbfs" path="res://Sprites/Enemies/FrozenBomber/FrozenBomber.png" id="3_jemtj"]
[ext_resource type="Texture2D" uid="uid://b38o2emtbf356" path="res://Sprites/Enemies/FrozenBomber/FrozenBomberCannon.png" id="4_efvjh"]
[ext_resource type="Texture2D" uid="uid://vbddaatpos0u" path="res://Sprites/Enemies/FrozenBomber/IceFire.png" id="5_5xl7h"]
[ext_resource type="AudioStream" uid="uid://mwocd27ftsdr" path="res://Sounds/CannonShot.mp3" id="6_w4cjh"]

[sub_resource type="Animation" id="Animation_5271o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Center/Pivot/Fire:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_33g7m"]
resource_name = "fire"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Center/Pivot/Fire:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Center/Pivot/Animation_Fire:speed_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.25]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbmit"]
_data = {
"RESET": SubResource("Animation_5271o"),
"fire": SubResource("Animation_33g7m")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_by00s"]
radius = 6.0

[node name="Frozen_Bomber" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 16
script = ExtResource("1_ksdd2")
score_to_add = 6
original_damage = 4.0
original_speed = 50.0
original_max_life = 12.0

[node name="Shadow" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.266667)
texture_filter = 1
position = Vector2(1.5, 3)
scale = Vector2(0.764706, 1.2)
texture = ExtResource("2_bgcme")
hframes = 2

[node name="Wheel_1" type="Sprite2D" parent="."]
position = Vector2(2, 2)
texture = ExtResource("2_nyc6u")

[node name="Center" type="Sprite2D" parent="."]
texture = ExtResource("3_jemtj")

[node name="Pivot" type="Node2D" parent="Center"]

[node name="Fire" type="Sprite2D" parent="Center/Pivot"]
visible = false
position = Vector2(13, 0)
texture = ExtResource("5_5xl7h")
hframes = 2

[node name="Animation_Fire" type="AnimationPlayer" parent="Center/Pivot"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_tbmit")
}
speed_scale = 1.25

[node name="Cannon" type="Sprite2D" parent="Center/Pivot"]
position = Vector2(7, 0)
texture = ExtResource("4_efvjh")

[node name="Shoot_Pos" type="Node2D" parent="Center/Pivot"]
position = Vector2(10, 0)

[node name="Shoot_Ray" type="RayCast2D" parent="Center/Pivot"]
position = Vector2(9, 0)
rotation = -1.5708
target_position = Vector2(0, 150)

[node name="Wheel_2" type="Sprite2D" parent="."]
position = Vector2(-3, 3)
texture = ExtResource("2_nyc6u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_by00s")

[node name="Shoot_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Shoot_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_w4cjh")
volume_db = 9.0
pitch_scale = 3.0
bus = &"Sounds"

[connection signal="die" from="." to="." method="_on_die"]
[connection signal="timeout" from="Shoot_Timer" to="." method="_on_shoot_timer_timeout"]
